--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngrx/effects": "^7.3.0",
     "@ngrx/store": "^7.3.0",
     "@ngx-resource/core": "^5.4.4",
     "@ngx-resource/handler-ngx-http": "^6.0.2",
