--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.2.0",
     "@ngrx/effects": "^7.3.0",
     "@ngrx/store": "^7.3.0",
+    "@ngrx/store-devtools": "^7.3.0",
     "@ngx-resource/core": "^5.4.4",
     "@ngx-resource/handler-ngx-http": "^6.0.2",
     "bootstrap": "^4.3.1",
