--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@ngrx/effects": "^7.3.0",
+    "@ngrx/router-store": "^7.4.0",
     "@ngrx/store": "^7.3.0",
     "@ngrx/store-devtools": "^7.3.0",
     "@ngx-resource/core": "^5.4.4",
