--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ckeditor/ckeditor5-angular": "^1.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^12.3.1",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@ngrx/effects": "^7.3.0",
     "@ngrx/router-store": "^7.4.0",
