PORTAL: add advert by template added, advert details page modified

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@ckeditor/ckeditor5-build-classic": "^12.3.1",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^12.4.0",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@ngrx/effects": "^7.3.0",
     "@ngrx/router-store": "^7.4.0",
@@ -46,6 +47,7 @@
     "@angular/cli": "~7.3.4",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@ckeditor/ckeditor5-alignment": "^11.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
