--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@ckeditor/ckeditor5-build-classic": "^12.3.1",
     "@ckeditor/ckeditor5-build-decoupled-document": "^12.4.0",
+    "@ckeditor/ckeditor5-image": "^14.0.0",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@ngrx/effects": "^7.3.0",
     "@ngrx/router-store": "^7.4.0",
