--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngx-resource/handler-ngx-http": "^6.0.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "ngx-socket-io": "^3.0.1",
