--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material-moment-adapter": "^7.3.6",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@ckeditor/ckeditor5-build-classic": "^12.3.1",
     "@ckeditor/ckeditor5-build-decoupled-document": "^12.4.0",
@@ -31,7 +33,7 @@
     "@ngrx/store": "^7.3.0",
     "@ngx-resource/core": "^5.4.4",
     "@ngx-resource/handler-ngx-http": "^6.0.2",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
