--- a/projects/operative-situation/src/manifest.json
+++ b/projects/operative-situation/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "operative-situation",
+  "name": "Оперативная обстановка",
   "short_name": "operative-situation",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
